# Yidhras

./: # 原型世界包.md  .dependency-cruiser.js  .gitignore  .prettierrc.json  AGENTS.md  API.md  ARCH.md  FRONTEND_BACKEND_HANDOFF.md  LICENSE  LOGIC.md  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.bat  start-dev.sh  vitest.workspace.ts  初始草稿（已和代码实现脱节）.md  新世界包草稿.txt  草稿.md  记录.md
apps/server/rust/: Cargo.toml  rustfmt.toml
apps/server/rust/memory-trigger/: Cargo.toml
apps/server/rust/memory-trigger/src/: engine.rs  logic_dsl.rs  main.rs  models.rs  sampling.rs  source.rs  trigger.rs
apps/server/rust/memory_trigger_sidecar/: Cargo.toml
apps/server/rust/memory_trigger_sidecar/src/: engine.rs  logic_dsl.rs  main.rs  models.rs  protocol.rs  sampling.rs  source.rs  trigger.rs
apps/server/rust/scheduler-decision/: Cargo.toml
apps/server/rust/scheduler-decision/src/: conversion.rs  kernel.rs  main.rs  models.rs  policy.rs
apps/server/rust/scheduler_decision_sidecar/: Cargo.toml
apps/server/rust/scheduler_decision_sidecar/src/: kernel.rs  main.rs  models.rs  policy.rs
apps/server/rust/sidecar-common/: Cargo.toml
apps/server/rust/sidecar-common/src/: lib.rs  protocol.rs  transport.rs  types.rs
apps/server/rust/world-engine/: Cargo.toml
apps/server/rust/world-engine/src/: lib.rs  main.rs
apps/server/rust/world-engine/src/engine/: mod.rs  (+4 more)
apps/server/rust/world_engine_sidecar/: Cargo.toml
apps/server/rust/world_engine_sidecar/src/: main.rs  models.rs  objective.rs  protocol.rs  session.rs  state.rs  step.rs  template.rs
(+1925 files in other folders)
